Fix left sidemenu header misalign

--- a/web/app/themes/nattours/assets/styles/layouts/_modals.scss
+++ b/web/app/themes/nattours/assets/styles/layouts/_modals.scss
@@ -4,7 +4,7 @@
     transform: translateX(-100%);
     transition: 0.5s;
     .container-fluid {margin: 0 !important;}
-    span {
+    .language {
       display: block;
     }
     .lang-item {
